@@ -43,7 +43,6 @@ from subprocess import Popen, PIPE
 import sys
 import tempfile
 import time
-import trace
 import unittest
 import warnings
 
@@ -2425,9 +2424,7 @@ def run_suite(suite, name='test', verbose=False, pattern=".*",
               list_only=False,
               random_seed=None,
               exclude_pattern=None,
-              strict=False,
-              coverage_dir=None,
-              ):
+              strict=False):
     TestCase._gather_lsprof_in_benchmarks = lsprof_timed
     if verbose:
         verbosity = 2
@@ -2470,18 +2467,7 @@ def run_suite(suite, name='test', verbose=False, pattern=".*",
         else:
             suite = order_changer(filter_suite_by_re(suite, pattern))
 
-    # Activate code coverage.
-    if coverage_dir is not None:
-        tracer = trace.Trace(count=1, trace=0)
-        sys.settrace(tracer.globaltrace)
-
     result = runner.run(suite)
-
-    if coverage_dir is not None:
-        sys.settrace(None)
-        results = tracer.results()
-        results.write_results(show_missing=1, summary=False,
-                              coverdir=coverage_dir)
 
     if strict:
         return result.wasStrictlySuccessful()
@@ -2499,7 +2485,6 @@ def selftest(verbose=False, pattern=".*", stop_on_failure=True,
              random_seed=None,
              exclude_pattern=None,
              strict=False,
-             coverage_dir=None,
              ):
     """Run the whole test suite under the enhanced runner"""
     # XXX: Very ugly way to do this...
@@ -2527,8 +2512,7 @@ def selftest(verbose=False, pattern=".*", stop_on_failure=True,
                      list_only=list_only,
                      random_seed=random_seed,
                      exclude_pattern=exclude_pattern,
-                     strict=strict,
-                     coverage_dir=coverage_dir)
+                     strict=strict)
     finally:
         default_transport = old_transport
 
